refactoring: SQLEditorInput must have project when possible